name:                lnforum-types
version:             0.1.0.117
synopsis:            Core haskell types for LN.
description:         See README.md
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
  exposed-modules:     LN.T
                       LN.T.Internal.Types
                       LN.T.ACL
                       LN.T.Api
                       LN.T.Api.Request
                       LN.T.Api.Response
                       LN.T.Count
                       LN.T.Count.Response
                       LN.T.Empty
                       LN.T.Ent
                       LN.T.Error
                       LN.T.Id
                       LN.T.Id.Request
                       LN.T.Id.Response
                       LN.T.Job
                       LN.T.Like
                       LN.T.Like.Request
                       LN.T.Like.Response
                       LN.T.Like.Stat
                       LN.T.Me
                       LN.T.Param
                       LN.T.PatternSynonyms
                       LN.T.Pack.User
                       LN.T.Pack.Me
                       LN.T.Pack.Sanitized.User
                       LN.T.Pack.Board
                       LN.T.Permission
                       LN.T.Prelude
                       LN.T.Profile
                       LN.T.Profile.Request
                       LN.T.Profile.Response
                       LN.T.Board
                       LN.T.Board.Request
                       LN.T.Board.Response
                       LN.T.Board.Stat
                       LN.T.Schema
                       LN.T.Size
                       LN.T.Test
                       LN.T.User
                       LN.T.User.Profile
                       LN.T.User.Request
                       LN.T.User.Response
                       LN.T.User.Sanitized
                       LN.T.User.Sanitized.Response
                       LN.T.User.Sanitized.Stat
                       LN.T.User.Settings
                       LN.T.User.Settings.Request
                       LN.T.User.Settings.Response
                       LN.T.User.Stat
                       LN.T.Version
                       LN.T.Visibility
                       LN.T.Simple
  build-depends:       base
                     , aeson
                     , data-default
                     , text
                     , transformers
                     , time
                     , haskell-api-helpers-shared
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-orphans
  default-extensions:  DeriveGeneric
                       DeriveAnyClass
                       RecordWildCards
                       DisambiguateRecordFields
                       NamedFieldPuns
